# image-viewer-rs

./: Cargo.toml  README.md
samples/: ComprehensiveCCL.ppm  FaceCCL.ppm  GeeksForGeeks.Transformed.ppm  GeeksForGeeks.ppm  HigherGamma.ppm  Plain.Red.32x32.ppm  RedCircle.128x128.ppm  RedCircle.32x32.ppm  TEST_SAMPLE_IMAGE.ppm  Test.RAW.ppm  TestWrite.ppm  Two.ppm  man8.ppm  man8_log1.ppm  man8_log_transform_expected.ppm  mandril.ppm  profile1.ppm
src/: app.rs  main.rs  tests.rs
src/core/: args.rs  ccl.rs  color.rs  cr2.rs  filters.rs  fourier.rs  io.rs  mod.rs  operations.rs  ppm.rs  stacking.rs
src/gui/: gui.rs  mod.rs  windows.rs
tests/addition/: 1.ppm  2.ppm
tests/equalize_hist/: 1.ppm  check.ppm
tests/gamma_correction/: check.0.3.ppm  check.2.8.ppm  check.5.0.ppm
tests/log_transformation/: check1.ppm  check2.ppm
tests/negation/: check.ppm
tests/resize/bilinear_interpolation/: 1.1024x1024.ppm  1.128x128.ppm  1.128x64.ppm  1.256x256.ppm  1.64x128.ppm
tests/resize/nearest_neighbor/: 1.1024x1024.ppm  1.128x128.ppm  1.128x64.ppm  1.256x256.ppm  1.64x128.ppm
tests/sobel_filter/: check.ppm  check_h.ppm  check_v.ppm
tests/subtraction/: 1.ppm
